# m-electronic-support-assistant

./: .dockerignore  .env.example  .gitignore  README.md  dockerfile  main.py  pyproject.toml
app/: config.py  main.py  ui.py
app/observability/: logging.py  metrics.py
app/prompts/: system_prompt.py
app/services/: chat_service.py  llm_service.py  mcp_service.py
scripts/: inspect_mcp.py
tests/: test_prompt_safety.py  test_tool_mapping.py
